Fix widget bottom element alignment (#4110)

--- a/client/app/components/dashboards/widget.less
+++ b/client/app/components/dashboards/widget.less
@@ -200,10 +200,6 @@ visualization-name {
   }
 }
 
-.refresh-button {
-  margin-left: -6px;
-}
-
 .tile {
   .widget-menu-regular, .btn__refresh {
     opacity: 0 !important;
@@ -249,7 +245,21 @@ visualization-name {
 
   .tile__bottom-control {
     padding: 10px 15px;
-    line-height: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .btn-transparent {
+      &:first-child {
+        margin-left: -10px;
+      }
+
+      &:last-child {
+        margin-right: -10px;
+      }
+    }
+
+
 
     a {
       color: fade(@redash-black, 65%);
